# mgnk-queue-modeling

./: .gitignore  CITATION.cff  Cargo.toml  config.toml
notebooks/: visualize.ipynb
report/: references.bib  report.tex
resources/: config.toml
scripts/: build-report.sh
simulator/: Cargo.toml
simulator/src/: actions.rs  broadcaster.rs  cli.rs  config.rs  main.rs  stats.rs
src/: distributions.rs  events.rs  lib.rs  node.rs  queue.rs  request.rs  system.rs
