[package]
name = "queuing-system-modeling"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "simulator"
]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
log = "0.4.17"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.163", optional = true }

[dev-dependencies]
once_cell = "1.17.1"
