[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
config = "0.13.3"
console = "0.15.5"
eyre = "0.6.8"
indicatif = "0.17.3"
serde_json = "1.0.96"
toml = "0.7.3"
