[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
console = "0.15.5"
indicatif = "0.17.3"
config = "0.13.3"
ctrlc = { version = "3.0", features = ["termination"] }

serde_json = "1.0.96"
serde = "1.0.162"
toml = "0.7.3"

threadpool = "1.8.1"
num_cpus = "1.15.0"
once_cell = "1.17.1"
eyre = "0.6.8"

queuing-system-modeling = { path = "../" }
simplelog = "0.12.1"
csv = "1.2.1"
